scripts/kube-backend-deployment-workload-gcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-deployment-gcp
  namespace: default
spec:
  selector:
    matchLabels:
      apps: backend-gcp
  replicas: 2
  template:
    metadata:
      labels:
        apps: backend-gcp
    spec:
      serviceAccountName: ksa-wl
      containers:
      - name: kube-e2e-service
        image: gcr.io/<project-id>/google_cloud_kubernetes_secure_e2e:v1
        ports:
          - containerPort: 8080
      - name: kube-esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port", "8081",
          "--backend", "127.0.0.1:8080",
          "--service", "api.cloudsolutions.academy",
          "--rollout_strategy", "managed",
        ]
        readinessProbe:
         httpGet:
          path: /healthz?key=<api_key>
          port: 8081
         initialDelaySeconds: 60
        livenessProbe:
         httpGet:
          path: /healthz?key=<api_key>
          port: 8081
         initialDelaySeconds: 60
        ports:
          - containerPort: 8081
