scripts/kube-backend-ingress-ssl-gcp.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: kube-ingress-gcp
  annotations:
     kubernetes.io/ingress.allow-http: "true"
     kubernetes.io/ingress.global-static-ip-name: backend-api-loadbalancer	
spec:
  tls:
  - hosts:
    - api.cloudsolutions.academy
    secretName: kube-api-ssl-secret
  rules:
  - host: api.cloudsolutions.academy
    http:
      paths:
      - backend:
            serviceName: kube-node-service-gcp		
            servicePort: 8081
